# conect

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: conect.cc  main.cc
cmake/: Doctest.cmake  LTO.cmake  Misc.cmake  Warnings.cmake  nanogui.cmake
conect/: ai.h  board.cc  board.h  common.h  conect.cc  config.h.in  engine.cc  engine.h  error.h  gltexture.h  gui.cc  gui.h  matrix.h  message.h  resource.h
conect/ai/: stratzilla.cc  stratzilla.h  stratzilla_old.cc
include/: board.h  config.h.in  engine.h  error.h  fjorir.h  game_board.h  gltexture.h  gui.h  interface.h
include/engine/: naive.h
orianna/: ai.h  board.cc  board.h  common.h  config.h.in  engine.cc  engine.h  gltexture.h  gui.cc  gui.h  message.h  orianna.cc
orianna/ai/: stratzilla.cc  stratzilla.h
src/: board.cc  canvas.cc  engine.cc  fjorir.cc  game_board.cc  gui.cc  interface.cc
test/: CMakeLists.txt  board.cc
test/ai/: stratzilla.cc
tests/: CMakeLists.txt  board.cc  main.cc
